# syntaxerror-prognose

./: .gitignore  CLAUDE.md  MANIFEST.md  MODEL_CARD.md  README.md  build_zip.sh  pyproject.toml  requirements.txt  syntaxerror_ensemble_test.py  syntaxerror_spotoptim_submit.py  syntaxerror_submit.py  teams.yml  typescript
.cache/tuning_results/: bart26k-live-syntaxerror-ensemble-test_Actual Load_spotoptim_20260624_203113.json  bart26k-live-syntaxerror-ensemble-test_Actual Load_spotoptim_20260625_111625.json  bart26k-live-syntaxerror-ensemble-test_Actual Load_spotoptim_20260625_174128.json  bart26k-live-syntaxerror-ensemble-test_Actual Load_spotoptim_20260625_211854.json  bart26k-live-syntaxerror-ensemble-test_Actual Load_spotoptim_20260626_114052.json  bart26k-live-syntaxerror-ensemble-test_Actual Load_spotoptim_20260626_203143.json  bart26k-live-syntaxerror-ensemble-test_Actual Load_spotoptim_20260627_200459.json  bart26k-live-syntaxerror-ensemble-test_Actual Load_spotoptim_20260628_192433.json  bart26k-live-syntaxerror-ensemble-test_Actual Load_spotoptim_20260629_150204.json  bart26k-live-syntaxerror-ensemble-test_Actual Load_spotoptim_20260629_184634.json  bart26k-live-syntaxerror-ensemble-test_Actual Load_spotoptim_20260630_140907.json  bart26k-live-syntaxerror-ensemble-test_Actual Load_spotoptim_20260701_202318.json  bart26k-live-syntaxerror-spotoptim_Actual Load_spotoptim_20260622_191528.json  bart26k-live-syntaxerror-spotoptim_Actual Load_spotoptim_20260623_135133.json  bart26k-live-syntaxerror-spotoptim_Actual Load_spotoptim_20260624_104039.json  bart26k-live-syntaxerror-spotoptim_Actual Load_spotoptim_20260624_202115.json  bart26k-live-team4-baseline_Actual Load_spotoptim_20260622_184621.json  bart26k-live-team4_Actual Load_spotoptim_20260608_133412.json  bart26k-live-team4_Actual Load_spotoptim_20260608_150353.json  bart26k-live-team4_Actual Load_spotoptim_20260609_200706.json  (+17 more)
.github/: SECURITY.md  dependabot.yml
.github/workflows/: codeql.yml
scripts/: analyse_weight_sweep.py  backtest_submissions.py  backup_to_onedrive.sh  push_submission.sh  syntaxerror_submit.py  syntaxerror_submit_260607_1957 copy.py  syntaxerror_submit_260607_1957.py  validate_submission.py
src/: teamsyntaxerror_submit.py
(+112 files in other folders)
