# Reproducibility package for the team_4 submissions of the
# Lastprognose-Challenge SoSe26 (https://bartzbeielstein.github.io/challenge-leaderboard/).
#
# Every dependency is ==-pinned to the EXACT version installed in the
# environment that produced the leaderboard submissions
# (bart26k-lecture@87e27e1, queried via importlib.metadata on 2026-06-07;
# see MANIFEST.md). Install with:  uv sync --frozen
[project]
name = "team4-repro"
version = "1.0.0"
description = "Reproduce the team syntaxerror day-ahead load forecasts of the Lastprognose-Challenge SoSe26"
requires-python = ">=3.13"
dependencies = [
    "spotforecast2-safe==18.1.0",
    "spotforecast2==5.1.1",
    "spotoptim==0.12.8",
    "lightgbm==4.6.0",
    "xgboost==3.2.0",
    "pandas==3.0.3",
    "numpy==2.4.6",
    "scipy==1.18.0rc1",
    "matplotlib==3.11.0rc2",
    "shap==0.52.0",
    "plotly==6.8.0",
    "kaleido==1.3.0",
    "pyyaml==6.0.3",
    "entsoe-py==0.8.0",
    "scikit-learn==1.9.0",
    "statsmodels==0.14.6",
    "holidays==0.98",
    "requests==2.34.2",
]

[tool.uv]
# Not an installable library -- just a pinned environment for the script.
package = false
# scipy 1.18.0rc1 / matplotlib 3.11.0rc2 are pre-releases in the original env.
prerelease = "allow"
# Intel macOS is unresolvable with these exact pins (shap 0.52.0 needs
# numba<0.63 there, spotforecast2 5.1.1 needs >=0.63.1) and is not a
# reference platform anyway -- the original run was on arm64 macOS
# (see MANIFEST.md); Linux/Windows resolve fine and are kept for porting.
environments = [
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
    "sys_platform == 'linux'",
    "sys_platform == 'win32'",
]
